{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 84,
  "lineage": "eca6691b-32f8-1f0b-8561-abff185fe5a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e3_eip_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0181533e5cd831fe8",
            "association_id": "eipassoc-0190869938c0a8249",
            "domain": "vpc",
            "id": "eipalloc-0181533e5cd831fe8",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-045ca5b93d21cde7c",
            "private_dns": "ip-10-0-1-72.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-13-55-60-237.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.55.60.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "e3_backend_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df4b2961410d4cff",
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:instance/i-056a1bc0290e1f107",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056a1bc0290e1f107",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-new-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d19062f6e754624c",
            "private_dns": "ip-10-0-3-15.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e5c9e49fb2d3bdb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0720ba4d73b881977"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba66c58f58398890",
            "tags": {
              "Name": "e3-redis",
              "Project": "e3"
            },
            "tags_all": {
              "Name": "e3-redis",
              "Project": "e3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0720ba4d73b881977"
            ]
          },
          "dependencies": [
            "aws_security_group.e3_backend_sg",
            "aws_security_group.e3_sg_bastion",
            "aws_subnet.e3_private_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "e3_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df4b2961410d4cff",
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:instance/i-0881fa024502cad3f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0881fa024502cad3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-new-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abf48fb76af5f012",
            "private_dns": "ip-10-0-1-30.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-3-26-226-224.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.226.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eab978a5459f1dc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c4406a22297ee00e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005f4fd69bb75bd5b",
            "tags": {
              "Name": "e3-easy-bastion-host",
              "Project": "e3-easy"
            },
            "tags_all": {
              "Name": "e3-easy-bastion-host",
              "Project": "e3-easy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4406a22297ee00e"
            ]
          },
          "dependencies": [
            "aws_instance.e3_backend_server_1",
            "aws_security_group.e3_backend_sg",
            "aws_security_group.e3_sg_bastion",
            "aws_subnet.e3_private_subnet_1",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:internet-gateway/igw-0d5dbef3dc3fcb0cc",
            "id": "igw-0d5dbef3dc3fcb0cc",
            "owner_id": "079999092048",
            "tags": {
              "Name": "e3-igw"
            },
            "tags_all": {
              "Name": "e3-igw"
            },
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e3_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0181533e5cd831fe8",
            "association_id": "eipassoc-0190869938c0a8249",
            "connectivity_type": "public",
            "id": "nat-00c217e17ba79617f",
            "network_interface_id": "eni-045ca5b93d21cde7c",
            "private_ip": "10.0.1.72",
            "public_ip": "13.55.60.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005f4fd69bb75bd5b",
            "tags": {
              "Name": "e3-nat-gateway"
            },
            "tags_all": {
              "Name": "e3-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.e3_eip_natgw",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e3_private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:route-table/rtb-026c18bf6340c0f29",
            "id": "rtb-026c18bf6340c0f29",
            "owner_id": "079999092048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c217e17ba79617f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-1"
            },
            "tags_all": {
              "Name": "private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e3_eip_natgw",
            "aws_nat_gateway.e3_natgw",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e3_private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:route-table/rtb-0a64cdb73246d03f1",
            "id": "rtb-0a64cdb73246d03f1",
            "owner_id": "079999092048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c217e17ba79617f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-2"
            },
            "tags_all": {
              "Name": "private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e3_eip_natgw",
            "aws_nat_gateway.e3_natgw",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e3_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:route-table/rtb-07bb2a6deb2fcf2ad",
            "id": "rtb-07bb2a6deb2fcf2ad",
            "owner_id": "079999092048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5dbef3dc3fcb0cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e3-public-route-table"
            },
            "tags_all": {
              "Name": "e3-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e3_igw",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e3_private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b2b0c16d3b2ea38",
            "route_table_id": "rtb-026c18bf6340c0f29",
            "subnet_id": "subnet-0ba66c58f58398890"
          },
          "dependencies": [
            "aws_eip.e3_eip_natgw",
            "aws_nat_gateway.e3_natgw",
            "aws_route_table.e3_private_route_table_1",
            "aws_subnet.e3_private_subnet_1",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e3_public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb417a7b2708ba0c",
            "route_table_id": "rtb-07bb2a6deb2fcf2ad",
            "subnet_id": "subnet-005f4fd69bb75bd5b"
          },
          "dependencies": [
            "aws_internet_gateway.e3_igw",
            "aws_route_table.e3_public_route_table",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e3_public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018070238ce256ee6",
            "route_table_id": "rtb-07bb2a6deb2fcf2ad",
            "subnet_id": "subnet-0ac870b36c7f535cd"
          },
          "dependencies": [
            "aws_internet_gateway.e3_igw",
            "aws_route_table.e3_public_route_table",
            "aws_subnet.e3_public_subnet_2",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad8a41dfa9ec28e",
            "route_table_id": "rtb-0a64cdb73246d03f1",
            "subnet_id": "subnet-093d1d9968d064f2d"
          },
          "dependencies": [
            "aws_eip.e3_eip_natgw",
            "aws_nat_gateway.e3_natgw",
            "aws_route_table.e3_private_route_table_2",
            "aws_subnet.e3_private_subnet_2",
            "aws_subnet.e3_public_subnet_1",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e3_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:security-group/sg-0720ba4d73b881977",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0720ba4d73b881977",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c4406a22297ee00e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "e3-backend-sg",
            "name_prefix": "",
            "owner_id": "079999092048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e3_sg_bastion",
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e3_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:security-group/sg-0c4406a22297ee00e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4406a22297ee00e",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.151.130.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "e3-bastion-sg",
            "name_prefix": "",
            "owner_id": "079999092048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e3_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:subnet/subnet-0ba66c58f58398890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba66c58f58398890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079999092048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e3-private-subnet-1"
            },
            "tags_all": {
              "Name": "e3-private-subnet-1"
            },
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e3_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:subnet/subnet-093d1d9968d064f2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093d1d9968d064f2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079999092048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e3-private-subnet-2"
            },
            "tags_all": {
              "Name": "e3-private-subnet-2"
            },
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e3_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:subnet/subnet-005f4fd69bb75bd5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005f4fd69bb75bd5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079999092048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e3-public-subnet-1"
            },
            "tags_all": {
              "Name": "e3-public-subnet-1"
            },
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e3_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:subnet/subnet-0ac870b36c7f535cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac870b36c7f535cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079999092048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e3-public-subnet-2"
            },
            "tags_all": {
              "Name": "e3-public-subnet-2"
            },
            "vpc_id": "vpc-012b0c3ec47ca63fc"
          },
          "dependencies": [
            "aws_vpc.e3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:079999092048:vpc/vpc-012b0c3ec47ca63fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e6d54dbe9ec4d1a1",
            "default_route_table_id": "rtb-01e9c5488c60e612e",
            "default_security_group_id": "sg-01bb740c289018ea7",
            "dhcp_options_id": "dopt-03f0fbe09eaa9c828",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012b0c3ec47ca63fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e9c5488c60e612e",
            "owner_id": "079999092048",
            "tags": {
              "Name": "e3-easy-vpc"
            },
            "tags_all": {
              "Name": "e3-easy-vpc"
            }
          }
        }
      ]
    }
  ]
}